feat: migrate auth from Privy to Base Quick Auth
- Replace Privy authentication with Farcaster Quick Auth via @farcaster/miniapp-sdk
- Remove guest mode - all users must now authenticate via Farcaster
- Add Base Pay integration for reprieve payments using @base-org/account
- Update LandingPage with "Sign In to Play" CTA
- Update UserMenu to display Farcaster username/FID
- Remove PrivyProvider, privy-config, and SaveScorePrompt components
- Add testnet support for payment testing (NEXT_PUBLIC_USE_TESTNET)

--- a/env.example
+++ b/env.example
@@ -20,15 +20,6 @@ UPSTASH_REDIS_REST_URL=https://your-redis-url.upstash.io
 UPSTASH_REDIS_REST_TOKEN=your-redis-token-here
 
 # ============================================
-# PRIVY AUTH (Required for Wallet Connect)
-# ============================================
-# Get these from https://dashboard.privy.io/
-# Create a new app and copy the App ID
-
-NEXT_PUBLIC_PRIVY_APP_ID=your-privy-app-id
-PRIVY_APP_SECRET=your-privy-secret
-
-# ============================================
 # IDENTITY RESOLUTION (Optional but recommended)
 # ============================================
 # Neynar API for Farcaster identity lookup
@@ -50,8 +41,6 @@ NEXT_PUBLIC_FEATURE_REPRIEVE=true
 # Make reprieves free during testing
 NEXT_PUBLIC_REPRIEVE_FREE=true
 
-# Wallet connect enabled
-NEXT_PUBLIC_FEATURE_WALLET_CONNECT=true
 
 # ============================================
 # API KEYS (Optional - for higher rate limits)
@@ -67,11 +56,15 @@ NEXT_PUBLIC_FEATURE_WALLET_CONNECT=true
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # ============================================
-# PAYMENT CONFIGURATION
+# PAYMENT CONFIGURATION (Base Pay)
 # ============================================
 # Treasury wallet address for USDC payments (Base network)
-# This is where reprieve payments ($1 USDC) will be sent
+# This is where reprieve payments ($1 USDC) will be sent via Base Pay
 NEXT_PUBLIC_TREASURY_ADDRESS=0xYourTreasuryWalletAddressHere
+
+# Set to 'true' to use Base Sepolia testnet for payments
+# Get test USDC from https://faucet.circle.com/ (select "Base Sepolia")
+NEXT_PUBLIC_USE_TESTNET=false
 
 # USDC Contract on Base: 0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913
 
