--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@base-org/account": "^2.5.1",
     "@farcaster/miniapp-sdk": "^0.2.1",
-    "@privy-io/react-auth": "^3.9.0",
-    "@privy-io/server-auth": "^1.32.5",
+    "@farcaster/quick-auth": "^0.0.8",
     "@solana-program/system": "^0.10.0",
     "@solana/web3.js": "^1.98.4",
     "@upstash/redis": "^1.35.8",
