feat: add notification system for Base Mini App
- Add @farcaster/miniapp-node for webhook verification
- Create notification storage/sending utilities (Redis-backed)
- Update webhook to verify events and store notification tokens
- Add webhookUrl to manifest for notification support
- Create AddMiniAppButton component for prompting users
- Update env.example with notification config

See: https://docs.base.org/mini-apps/core-concepts/notifications

--- a/env.example
+++ b/env.example
@@ -20,10 +20,11 @@ UPSTASH_REDIS_REST_URL=https://your-redis-url.upstash.io
 UPSTASH_REDIS_REST_TOKEN=your-redis-token-here
 
 # ============================================
-# IDENTITY RESOLUTION (Optional but recommended)
+# IDENTITY RESOLUTION & NOTIFICATIONS (Required for Farcaster features)
 # ============================================
-# Neynar API for Farcaster identity lookup
-# Get from https://neynar.com/
+# Neynar API for Farcaster identity lookup and webhook verification
+# Get a free API key from https://neynar.com/
+# Used for: identity resolution, webhook signature verification, notifications
 NEYNAR_API_KEY=your-neynar-key
 
 # Alchemy for ENS resolution
@@ -79,7 +80,12 @@ NEXT_PUBLIC_USE_TESTNET=false
 # COINBASE_COMMERCE_API_KEY=...
 
 # ============================================
-# FARCASTER MINI-APP (Phase 1+ - Future)
+# FARCASTER MINI-APP / BASE ACCOUNT ASSOCIATION
 # ============================================
-# FARCASTER_APP_FID=
-# FARCASTER_DEVELOPER_MNEMONIC=
+# Generate these at https://www.base.dev/preview?tab=account
+# After deploying, paste your domain and sign with your wallet
+# These prove you own the domain for your mini app
+
+ACCOUNT_ASSOCIATION_HEADER=
+ACCOUNT_ASSOCIATION_PAYLOAD=
+ACCOUNT_ASSOCIATION_SIGNATURE=
