--- a/env.example
+++ b/env.example
@@ -57,6 +57,17 @@ NEXT_PUBLIC_REPRIEVE_FREE=true
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # ============================================
+# POSTHOG ANALYTICS (Free tier: 1M events/month)
+# ============================================
+# Get your key from https://posthog.com/
+# 1. Sign up for free account
+# 2. Create a new project
+# 3. Copy your Project API Key
+# 4. Optional: Set custom host if using EU region
+NEXT_PUBLIC_POSTHOG_KEY=phc_your_project_key_here
+# NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com  # Optional, defaults to US
+
+# ============================================
 # PAYMENT CONFIGURATION (Base Pay)
 # ============================================
 # Treasury wallet address for USDC payments (Base network)
