--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vercel/speed-insights": "^1.3.1",
     "bs58": "^6.0.0",
     "next": "15.3.8",
+    "posthog-js": "^1.309.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "uuid": "^13.0.0",
