Add win screen and leaderboard link improvements
- Add WinScreen component for personal best and top 3 achievements
- Add leaderboard link to LossScreen (top-right corner)
- Remove dev mode references from production code (useAuthDev)
- Add 10 positive/humble brag share templates for wins
- Update useGame to detect wins (personal best or top 3)
- Add useAuthDev.ts to gitignore for local testing only

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ next-env.d.ts
 # mock data (local testing only)
 src/lib/mock-leaderboard.ts
 src/app/api/debug/
+# dev mode (local testing only)
+src/hooks/useAuthDev.ts
