Add Privy auth fallback and fix identity resolution
- Add Privy authentication as fallback for web browsers
- Base App: One-click login via Farcaster Quick Auth (unchanged)
- Web: Privy login with wallet/email/social options
- Implement dual auth strategy with automatic fallback

- Fix identity resolution for leaderboard display:
  - FIDs now resolve to @username via Neynar API
  - Priority: Farcaster username > ENS > Truncated address
  - Fix truncation issues for short FIDs (no more '3626...3626')
  - Handle Privy UUIDs and all user ID types correctly

- Update UserType to include 'privy'
- Improve truncateAddress to handle short strings
- Add detection and auto-fix for bad truncation patterns in cache
- Update leaderboard routes to resolve FIDs properly

- Update clear-leaderboard script to clear all Redis entries
- Add PrivyProvider component with dark theme
- Update ConnectButton to handle both auth methods

--- a/env.example
+++ b/env.example
@@ -57,6 +57,14 @@ NEXT_PUBLIC_REPRIEVE_FREE=true
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # ============================================
+# AUTHENTICATION (Privy for Web)
+# ============================================
+# Privy App ID for web authentication (fallback when Base App Quick Auth not available)
+# Get from https://dashboard.privy.io/
+# Required for web browser authentication
+NEXT_PUBLIC_PRIVY_APP_ID=your_privy_app_id
+
+# ============================================
 # POSTHOG ANALYTICS (Free tier: 1M events/month)
 # ============================================
 # Get your key from https://posthog.com/
