--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "canvas-confetti": "^1.9.4",
     "next": "15.3.8",
     "posthog-js": "^1.309.1",
+    "@privy-io/react-auth": "^2.25.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "uuid": "^13.0.0",
