feat: Add mystery box feature with Base testnet support
- Add mystery box rewards system with token airdrops
- Implement daily pool system with Redis storage
- Add mystery box UI components (MysteryBox, ClaimFlow, ScratchCard)
- Add prize pool and weekly leaderboard features
- Add network configuration for Base Mainnet/Testnet
- Exclude test pages from repository

Mystery Box Features:
- Eligibility checking based on engagement and streak
- Daily pool of 50 boxes with weighted token selection
- Token airdrop transactions on Base network
- Price fetching from DexScreener API
- Support for both mainnet and testnet

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ src/lib/mock-leaderboard.ts
 src/app/api/debug/
 # dev mode (local testing only)
 src/hooks/useAuthDev.ts
+# test pages (local testing only)
+src/app/test-mystery-box/
+src/app/test-mystery-box-ui/
+src/app/api/mystery-box/test-prices/
+test-mystery-box.js
